perf(layers): add debug harness and baseline docs; import Safari screenshots; cap WebGL DPR (<=1.5) with override; enable stage.sortableChildren; harden resize guard; wire harness in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="./fx/hue-effects.css" />
   <link rel="stylesheet" href="./fx/errl-bg.css" />
   <script type="module" src="./assets.js"></script>
+  <!-- Debug harness: runtime layer toggles (safe no-op unless used) -->
+  <script type="module" src="./portal/dev/debug.ts"></script>
 </head>
 <body data-errlMode="stable" class="errl-dark">
   <!-- Background shimmer via ErrlBG -->
