perf: restore rising bubbles default + update docs

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <!-- Background shimmer via ErrlBG -->
   <canvas id="bgParticles"></canvas>
   <!-- Rising bubbles (Stable mode + fallback) -->
-  <canvas id="riseBubbles" style="display:none"></canvas>
+  <canvas id="riseBubbles"></canvas>
 
   <!-- WebGL layer (hidden in Stable mode) -->
   
