ui: center hero and scale orbit for small screens

--- a/src/index.html
+++ b/src/index.html
@@ -162,8 +162,8 @@
         <input type="range" min="0" max="1.5" step="0.01" value="1.2" id="bgDensity" title="Particle count">
       </div>
       <div class="sliderRow">
-        <label for="bgAlpha" title="Opacity of the GPU bubble layer">Alpha</label>
-        <input type="range" min="0" max="1" step="0.01" value="0.85" id="bgAlpha" title="Particle alpha">
+        <label for="glAlpha" title="Opacity of the GPU bubble layer">Alpha</label>
+        <input type="range" min="0" max="1" step="0.01" value="0.85" id="glAlpha" title="Particle alpha">
       </div>
       <div class="sliderRow" style="justify-content:flex-end"><button id="glbRandom">Randomize</button></div>
     </div>
