Enhance component catalog with unified inventory and preview features. Added a comprehensive component inventory registry and scanning script for better tracking. Updated styles for improved layout and added live preview functionality for components. Adjusted grid settings and added metadata for better organization.

--- a/packages/component-rips/bubbling-rainbow-rings/index.html
+++ b/packages/component-rips/bubbling-rainbow-rings/index.html
@@ -32,6 +32,7 @@
       </section>
     </main>
     <canvas id="canvas"></canvas>
+    <script src="../../_shared/preview-mode.js"></script>
     <script type="module" src="./script.js"></script>
   </body>
 </html>
