--- a/packages/component-rips/errl-tunnel/index.html
+++ b/packages/component-rips/errl-tunnel/index.html
@@ -99,6 +99,7 @@
         <input type="range" id="ringCount" min="3" max="8" step="1" value="5" />
       </label>
     </div>
+    <script src="../../_shared/preview-mode.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
