--- a/packages/component-rips/fast-rainbow-rings-cursor/index.html
+++ b/packages/component-rips/fast-rainbow-rings-cursor/index.html
@@ -14,6 +14,7 @@
       <p class="hint">Move your pointer. Space toggles forward/reverse time waves.</p>
       <button id="toggleReverse" type="button">Toggle Reverse</button>
     </div>
+    <script src="../../_shared/preview-mode.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
