--- a/packages/component-rips/gradient-box-button/index.html
+++ b/packages/component-rips/gradient-box-button/index.html
@@ -26,6 +26,7 @@
         <input type="range" id="radius" min="0" max="50" value="16" />
       </label>
     </div>
+    <script src="../../_shared/preview-mode.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
