--- a/packages/component-rips/rainbow-fluid-smoke/index.html
+++ b/packages/component-rips/rainbow-fluid-smoke/index.html
@@ -44,6 +44,7 @@
     <div class="motion-warning" id="motionWarning" role="alert">
       Reduced motion is enabled, so the smoke animation is paused.
     </div>
+    <script src="../../_shared/preview-mode.js"></script>
     <script type="module" src="./script.js"></script>
   </body>
 </html>
