--- a/packages/component-rips/rainbow-neural-pathways/index.html
+++ b/packages/component-rips/rainbow-neural-pathways/index.html
@@ -36,6 +36,7 @@
         <canvas id="network" aria-label="Rainbow neural pathway canvas"></canvas>
       </section>
     </main>
+    <script src="../../_shared/preview-mode.js"></script>
     <script type="module" src="./script.js"></script>
   </body>
 </html>
