--- a/packages/component-rips/rainbow-tunnel/index.html
+++ b/packages/component-rips/rainbow-tunnel/index.html
@@ -52,6 +52,7 @@
         </footer>
       </section>
     </main>
+    <script src="../../_shared/preview-mode.js"></script>
     <script type="module" src="./script.js"></script>
   </body>
 </html>
