--- a/packages/component-rips/silhouette-inversion/index.html
+++ b/packages/component-rips/silhouette-inversion/index.html
@@ -17,6 +17,7 @@
       </label>
       <p class="note">Stare at the image for ~10 seconds, then toggle to see the inversion effect.</p>
     </div>
+    <script src="../../_shared/preview-mode.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
