--- a/packages/component-rips/simple-blue-bubble-trail-cursor/index.html
+++ b/packages/component-rips/simple-blue-bubble-trail-cursor/index.html
@@ -24,6 +24,7 @@
         <input id="size" type="range" min="3" max="12" step="1" value="6" />
       </label>
     </div>
+    <script src="../../_shared/preview-mode.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
