--- a/packages/component-rips/taffy-typing/index.html
+++ b/packages/component-rips/taffy-typing/index.html
@@ -39,6 +39,7 @@
         <input type="range" id="fontSize" min="60" max="150" value="110" />
       </label>
     </div>
+    <script src="../../_shared/preview-mode.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
