--- a/packages/component-rips/holographic-cube-cursor/index.html
+++ b/packages/component-rips/holographic-cube-cursor/index.html
@@ -24,6 +24,7 @@
         <input type="range" id="trailLength" min="5" max="30" step="1" value="15" />
       </label>
     </div>
+    <script src="../../_shared/preview-mode.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
