--- a/packages/component-rips/live-gradient-mixer/index.html
+++ b/packages/component-rips/live-gradient-mixer/index.html
@@ -38,6 +38,7 @@
         </div>
       </section>
     </main>
+    <script src="../../_shared/preview-mode.js"></script>
     <script type="module" src="./script.js"></script>
   </body>
 </html>
