--- a/packages/component-rips/rainbow-spinning-bg/index.html
+++ b/packages/component-rips/rainbow-spinning-bg/index.html
@@ -21,6 +21,7 @@
         <input id="bloom" type="range" min="0" max="1" step="0.01" value="0.8" />
       </label>
     </div>
+    <script src="../../_shared/preview-mode.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
