--- a/packages/component-rips/rainbow-spinning-button/index.html
+++ b/packages/component-rips/rainbow-spinning-button/index.html
@@ -41,6 +41,7 @@
         <input type="range" id="spd" min="0" max="1" step="0.01" value="0.6" />
       </label>
     </div>
+    <script src="../../_shared/preview-mode.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
