--- a/packages/component-rips/rainbow-string-particles/index.html
+++ b/packages/component-rips/rainbow-string-particles/index.html
@@ -24,6 +24,7 @@
         <input type="range" id="speed" min="0.1" max="2" step="0.1" value="0.8" />
       </label>
     </div>
+    <script src="../../_shared/preview-mode.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
