--- a/packages/component-rips/rainbow-trailing-orbs-cursor/index.html
+++ b/packages/component-rips/rainbow-trailing-orbs-cursor/index.html
@@ -24,6 +24,7 @@
         <input id="size" type="range" min="2" max="20" step="1" value="8" />
       </label>
     </div>
+    <script src="../../_shared/preview-mode.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
