--- a/packages/component-rips/spectral-harp-membrane/index.html
+++ b/packages/component-rips/spectral-harp-membrane/index.html
@@ -14,6 +14,7 @@
       <button id="mic" type="button">Enable Microphone</button>
       <span class="hint">or swipe across the grid</span>
     </div>
+    <script src="../../_shared/preview-mode.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
