--- a/packages/component-rips/terrapin-whirl-module/index.html
+++ b/packages/component-rips/terrapin-whirl-module/index.html
@@ -20,6 +20,7 @@
         </label>
       </div>
     </div>
+    <script src="../../_shared/preview-mode.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
