--- a/packages/component-rips/terrapin-whirl/index.html
+++ b/packages/component-rips/terrapin-whirl/index.html
@@ -26,6 +26,7 @@
         </footer>
       </section>
     </main>
+    <script src="../../_shared/preview-mode.js"></script>
     <script type="module" src="./script.js"></script>
   </body>
 </html>
