--- a/packages/component-rips/webcam-effects/index.html
+++ b/packages/component-rips/webcam-effects/index.html
@@ -35,6 +35,7 @@
         <div class="gallery" id="gallery" aria-live="polite"></div>
       </section>
     </main>
+    <script src="../../_shared/preview-mode.js"></script>
     <script type="module" src="./script.js"></script>
   </body>
 </html>
